Alembic Export Error #63528

Closed
opened 2019-04-12 10:47:10 +02:00 by Bjoern Lindner · 9 comments

System Information
Operating system: macOS 10.14.4
Graphics card: Radeon Pro 560X 4 GB, Intel UHD Graphics 630 1536 MB

Blender Version
Broken: Version 2.80 (2.80 2019-04-09, Blender Foundation)
Worked: (optional)

Short description of error
I want to export an alambic file.

Exact steps for others to reproduce the error
Start with the default cube and try to export it as alambic.
In the console I can't find any error messages.

Bildschirmfoto 2019-04-12 um 10.45.19.png

**System Information** Operating system: macOS 10.14.4 Graphics card: Radeon Pro 560X 4 GB, Intel UHD Graphics 630 1536 MB **Blender Version** Broken: Version 2.80 (2.80 2019-04-09, Blender Foundation) Worked: (optional) **Short description of error** I want to export an alambic file. **Exact steps for others to reproduce the error** Start with the default cube and try to export it as alambic. In the console I can't find any error messages. ![Bildschirmfoto 2019-04-12 um 10.45.19.png](https://archive.blender.org/developer/F6934314/Bildschirmfoto_2019-04-12_um_10.45.19.png)
Author

Added subscriber: @USDZLover

Added subscriber: @USDZLover

Added subscriber: @ChristophWerner

Added subscriber: @ChristophWerner

Added subscribers: @WilliamReynish, @ZedDB

Added subscribers: @WilliamReynish, @ZedDB

Can't reproduce on my end (linux).

@WilliamReynish can you reproduce this?

Can't reproduce on my end (linux). @WilliamReynish can you reproduce this?

Removed subscriber: @WilliamReynish

Removed subscriber: @WilliamReynish

Added subscriber: @brecht

Added subscriber: @brecht

I can confirm this on macOS.

I can confirm this on macOS.

This issue was referenced by fbb03f67ec

This issue was referenced by fbb03f67ec3434281b7024627790337fb9eb3502

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63528
No description provided.