Fix T63528: Alembic export always showing error on macOS, even on success

tellp() is not valid to check if the string stream is empty. Just get the
string directly as there is no obvious efficient method to check otherwise.