source/blender/alembic/intern/alembic_capi.cc
@@ -290,8 +290,9 @@ static void export_endjob(void *customdata)
     BLI_delete(data->filename, false, false);
   }
 
-  if (!data->settings.logger.empty()) {
-    std::cerr << data->settings.logger;
+  std::string log = data->settings.logger.str();
+  if (!log.empty()) {
+    std::cerr << log;
     WM_report(RPT_ERROR, "Errors occurred during the export, look in the console to know more...");
   }
 
